translation, html, not fully implemented

--- a/App.Data/Resources/Navigation/Navigation.ru.resx
+++ b/App.Data/Resources/Navigation/Navigation.ru.resx
@@ -18,4 +18,31 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
+    <data name="Navigation_Sidebar_Category_Headphones_Text" xml:space="preserve">
+        <value>Наушники</value>
+    </data>
+    <data name="Navigation_Sidebar_Category_Keyboard_Text" xml:space="preserve">
+        <value>Клавиатуры</value>
+    </data>
+    <data name="Navigation_Sidebar_Category_Laptop_Text" xml:space="preserve">
+        <value>Ноутбуки</value>
+    </data>
+    <data name="Navigation_Sidebar_Category_Monitor_Text" xml:space="preserve">
+        <value>Мониторы</value>
+    </data>
+    <data name="Navigation_Sidebar_Category_Mouse_Text" xml:space="preserve">
+        <value>Мыши</value>
+    </data>
+    <data name="Navigation_Sidebar_Dashboard_Text" xml:space="preserve">
+        <value>Панель управления</value>
+    </data>
+    <data name="Navigation_Sidebar_Home_Text" xml:space="preserve">
+        <value>Домашняя страница</value>
+    </data>
+    <data name="Navigation_Sidebar_Order_Text" xml:space="preserve">
+        <value>Заказы</value>
+    </data>
+    <data name="Navigation_Sidebar_Product_Text" xml:space="preserve">
+        <value>Товары</value>
+    </data>
 </root>
