--- a/App.Data/Resources/Heading/Heading.et-EE.resx
+++ b/App.Data/Resources/Heading/Heading.et-EE.resx
@@ -18,4 +18,13 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
+    <data name="Heading_Products_Text" xml:space="preserve">
+        <value>Soovitatud tooted</value>
+    </data>
+    <data name="Heading_Categories_Text" xml:space="preserve">
+        <value>Kategooriad</value>
+    </data>
+    <data name="Heading_Shop" xml:space="preserve">
+        <value>Pood</value>
+    </data>
 </root>
