--- a/App.Data/Resources/Navigation/Navigation.ru.resx
+++ b/App.Data/Resources/Navigation/Navigation.ru.resx
@@ -18,31 +18,46 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Navigation_Sidebar_Category_Headphones_Text" xml:space="preserve">
-        <value>Наушники</value>
+    <data name="Navigation_Product_Text" xml:space="preserve">
+        <value>Товары</value>
     </data>
-    <data name="Navigation_Sidebar_Category_Keyboard_Text" xml:space="preserve">
-        <value>Клавиатуры</value>
-    </data>
-    <data name="Navigation_Sidebar_Category_Laptop_Text" xml:space="preserve">
-        <value>Ноутбуки</value>
-    </data>
-    <data name="Navigation_Sidebar_Category_Monitor_Text" xml:space="preserve">
-        <value>Мониторы</value>
-    </data>
-    <data name="Navigation_Sidebar_Category_Mouse_Text" xml:space="preserve">
-        <value>Мыши</value>
-    </data>
-    <data name="Navigation_Sidebar_Dashboard_Text" xml:space="preserve">
-        <value>Панель управления</value>
-    </data>
-    <data name="Navigation_Sidebar_Home_Text" xml:space="preserve">
-        <value>Домашняя страница</value>
-    </data>
-    <data name="Navigation_Sidebar_Order_Text" xml:space="preserve">
+    <data name="Navigation_Order_Text" xml:space="preserve">
         <value>Заказы</value>
     </data>
-    <data name="Navigation_Sidebar_Product_Text" xml:space="preserve">
-        <value>Товары</value>
+    <data name="Navigation_Home_Text" xml:space="preserve">
+        <value>Домашняя страница</value>
+    </data>
+    <data name="Navigation_Dashboard_Text" xml:space="preserve">
+        <value>Панель управления</value>
+    </data>
+    <data name="Navigation_Category_Headphones_Text" xml:space="preserve">
+        <value>Наушники</value>
+    </data>
+    <data name="Navigation_Category_Keyboard_Text" xml:space="preserve">
+        <value>Клавиатуры</value>
+    </data>
+    <data name="Navigation_Category_Laptop_Text" xml:space="preserve">
+        <value>Ноутбуки</value>
+    </data>
+    <data name="Navigation_Category_Monitor_Text" xml:space="preserve">
+        <value>Мониторы</value>
+    </data>
+    <data name="Navigation_Category_Mouse_Text" xml:space="preserve">
+        <value>Мыши</value>
+    </data>
+    <data name="Navigation_About_Us_Text" xml:space="preserve">
+        <value>О Нас</value>
+    </data>
+    <data name="Navigation_Contact_Text" xml:space="preserve">
+        <value>Контакт</value>
+    </data>
+    <data name="Navigation_Register_Text" xml:space="preserve">
+        <value>Зарегистрироваться</value>
+    </data>
+    <data name="Navigation_Logout_Text" xml:space="preserve">
+        <value>Выйти</value>
+    </data>
+    <data name="Navigation_Login_Text" xml:space="preserve">
+        <value>Авторизоваться</value>
     </data>
 </root>
