--- a/App.Data/Resources/Navigation/Navigation.en-US.resx
+++ b/App.Data/Resources/Navigation/Navigation.en-US.resx
@@ -18,46 +18,46 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Navigation_About_Us_Text" xml:space="preserve">
+    <data name="Navigation_About_Us" xml:space="preserve">
         <value>About Us</value>
     </data>
-    <data name="Navigation_Category_Headphones_Text" xml:space="preserve">
+    <data name="Navigation_Category_Headphones" xml:space="preserve">
         <value>Headphones</value>
     </data>
-    <data name="Navigation_Category_Laptop_Text" xml:space="preserve">
+    <data name="Navigation_Category_Laptop" xml:space="preserve">
         <value>Laptops</value>
     </data>
-    <data name="Navigation_Category_Keyboard_Text" xml:space="preserve">
+    <data name="Navigation_Category_Keyboard" xml:space="preserve">
         <value>Keyboards</value>
     </data>
-    <data name="Navigation_Category_Monitor_Text" xml:space="preserve">
+    <data name="Navigation_Category_Monitor" xml:space="preserve">
         <value>Monitors</value>
     </data>
-    <data name="Navigation_Category_Mouse_Text" xml:space="preserve">
+    <data name="Navigation_Category_Mouse" xml:space="preserve">
         <value>Mice</value>
     </data>
-    <data name="Navigation_Dashboard_Text" xml:space="preserve">
+    <data name="Navigation_Dashboard" xml:space="preserve">
         <value>Dashboard</value>
     </data>
-    <data name="Navigation_Home_Text" xml:space="preserve">
+    <data name="Navigation_Home" xml:space="preserve">
         <value>Home</value>
     </data>
-    <data name="Navigation_Order_Text" xml:space="preserve">
+    <data name="Navigation_Order" xml:space="preserve">
         <value>Orders</value>
     </data>
-    <data name="Navigation_Product_Text" xml:space="preserve">
+    <data name="Navigation_Product" xml:space="preserve">
         <value>Products</value>
     </data>
-    <data name="Navigation_Contact_Text" xml:space="preserve">
+    <data name="Navigation_Contact" xml:space="preserve">
         <value>Contact</value>
     </data>
-    <data name="Navigation_Login_Text" xml:space="preserve">
+    <data name="Navigation_Login" xml:space="preserve">
         <value>Login</value>
     </data>
-    <data name="Navigation_Logout_Text" xml:space="preserve">
+    <data name="Navigation_Logout" xml:space="preserve">
         <value>Logout</value>
     </data>
-    <data name="Navigation_Register_Text" xml:space="preserve">
+    <data name="Navigation_Register" xml:space="preserve">
         <value>Register</value>
     </data>
 </root>
