--- a/App.Data/Resources/Resources.et-EE.resx
+++ b/App.Data/Resources/Resources.et-EE.resx
@@ -18,46 +18,61 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="Navigation_About_Us" xml:space="preserve">
-        <value>About Us</value>
-    </data>
     <data name="Navigation_Category_Headphones" xml:space="preserve">
-        <value>Headphones</value>
-    </data>
-    <data name="Navigation_Category_Laptop" xml:space="preserve">
-        <value>Laptops</value>
+        <value>Kõrvaklapid</value>
     </data>
     <data name="Navigation_Category_Keyboard" xml:space="preserve">
-        <value>Keyboards</value>
+        <value>Klaviatuurid</value>
+    </data>
+    <data name="Navigation_Category_Laptop" xml:space="preserve">
+        <value>Sülearvutid</value>
     </data>
     <data name="Navigation_Category_Monitor" xml:space="preserve">
-        <value>Monitors</value>
+        <value>Monitorid</value>
     </data>
     <data name="Navigation_Category_Mouse" xml:space="preserve">
-        <value>Mice</value>
+        <value>Hiired</value>
     </data>
     <data name="Navigation_Dashboard" xml:space="preserve">
-        <value>Dashboard</value>
+        <value>Töölaud</value>
     </data>
     <data name="Navigation_Home" xml:space="preserve">
-        <value>Home</value>
+        <value>Avaleht</value>
     </data>
     <data name="Navigation_Order" xml:space="preserve">
-        <value>Orders</value>
+        <value>Tellimused</value>
     </data>
     <data name="Navigation_Product" xml:space="preserve">
-        <value>Products</value>
+        <value>Tooted</value>
     </data>
     <data name="Navigation_Contact" xml:space="preserve">
-        <value>Contact</value>
+        <value>Kontakt</value>
     </data>
-    <data name="Navigation_Login" xml:space="preserve">
-        <value>Login</value>
-    </data>
-    <data name="Navigation_Logout" xml:space="preserve">
-        <value>Logout</value>
+    <data name="Navigation_About_Us" xml:space="preserve">
+        <value>Meist</value>
     </data>
     <data name="Navigation_Register" xml:space="preserve">
-        <value>Register</value>
+        <value>Registreeru</value>
+    </data>
+    <data name="Navigation_Logout" xml:space="preserve">
+        <value>Logi välja</value>
+    </data>
+    <data name="Navigation_Login" xml:space="preserve">
+        <value>Sisselogi</value>
+    </data>
+    <data name="Heading_Products" xml:space="preserve">
+        <value>Soovitatud tooted</value>
+    </data>
+    <data name="Heading_Categories" xml:space="preserve">
+        <value>Kategooriad</value>
+    </data>
+    <data name="Heading_Shop" xml:space="preserve">
+        <value>Pood</value>
+    </data>
+    <data name="Button_Product_Add_To_Cart" xml:space="preserve">
+        <value>Lisa ostukorvi</value>
+    </data>
+    <data name="Button_Product_Details" xml:space="preserve">
+        <value>Detailid</value>
     </data>
 </root>
