--- a/App.Data/Resources/Resources.resx
+++ b/App.Data/Resources/Resources.resx
@@ -75,4 +75,10 @@
     <data name="Button_Product_Details" xml:space="preserve">
         <value>Details</value>
     </data>
+    <data name="Test" xml:space="preserve">
+        <value>dsd</value>
+    </data>
+    <data name="test2" xml:space="preserve">
+        <value>dsadas</value>
+    </data>
 </root>
