--- a/App.Data/Resources/Resources.ru.resx
+++ b/App.Data/Resources/Resources.ru.resx
@@ -75,4 +75,10 @@
     <data name="Button_Product_Details" xml:space="preserve">
         <value>Подробности</value>
     </data>
+    <data name="Test" xml:space="preserve">
+        <value>ds</value>
+    </data>
+    <data name="test2" xml:space="preserve">
+        <value>asdsadsa</value>
+    </data>
 </root>
